test/samples/valid/ifStatementThenBlock.ygl
node Foo {
    out {
        int a = 42;
    }
    process {
        if (2 > 1) {
            out.a = 1;
        } else {
            out.a = 0;
        }
    }
}

node Check : Print;

Foo.out.a -> Check.in.text;
expect:1