test/samples/invalid/missingIn.ygl
node Foo {
    {
        int bar = 0
    }

   process {
        bar = bar + 1
    }
}

